# serializer version: 1
# name: test_snapshot_fetch_exchange[AR-BR-S-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -0.009936,
      'sortedZoneKeys': 'AR->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[AR-BR-S-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -0.009936,
      'sortedZoneKeys': 'AR->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[AR-BR-S-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -942.2021,
      'sortedZoneKeys': 'AR->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-N-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -2816.56787,
      'sortedZoneKeys': 'BR-CS->BR-N',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-N-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -2816.56787,
      'sortedZoneKeys': 'BR-CS->BR-N',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-N-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -3529.24756,
      'sortedZoneKeys': 'BR-CS->BR-N',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-NE-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 785.116638,
      'sortedZoneKeys': 'BR-CS->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-NE-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 785.116638,
      'sortedZoneKeys': 'BR-CS->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-NE-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -5336.844,
      'sortedZoneKeys': 'BR-CS->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-S-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 203.333054,
      'sortedZoneKeys': 'BR-CS->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-S-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 203.333054,
      'sortedZoneKeys': 'BR-CS->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-CS-BR-S-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': 4357.55273,
      'sortedZoneKeys': 'BR-CS->BR-S',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-N-BR-NE-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 2967.768,
      'sortedZoneKeys': 'BR-N->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-N-BR-NE-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 2967.768,
      'sortedZoneKeys': 'BR-N->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-N-BR-NE-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -4413.3833,
      'sortedZoneKeys': 'BR-N->BR-NE',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-PY-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -0.0,
      'sortedZoneKeys': 'BR-S->PY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-PY-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': -0.0,
      'sortedZoneKeys': 'BR-S->PY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-PY-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -0.0,
      'sortedZoneKeys': 'BR-S->PY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-UY-BR.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 14.0,
      'sortedZoneKeys': 'BR-S->UY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-UY-BR_negative_solar.json]
  list([
    dict({
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'netFlow': 14.0,
      'sortedZoneKeys': 'BR-S->UY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[BR-S-UY-data.json]
  list([
    dict({
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'netFlow': -0.9615,
      'sortedZoneKeys': 'BR-S->UY',
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-CS-BR.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 35888.05363,
        'nuclear': 1829.29529,
        'solar': 2.85705,
        'unknown': 2507.78833,
        'wind': 4.2,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-CS',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-CS-BR_negative_solar.json]
  list([
    dict({
      'correctedModes': list([
        'solar',
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 35888.05363,
        'nuclear': 1829.29529,
        'solar': 0,
        'unknown': 2507.78833,
        'wind': 4.2,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-CS',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-CS-data.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'production': dict({
        'hydro': 17603.9198,
        'nuclear': 2011.05078,
        'solar': 11259.3008,
        'unknown': 8401.434,
        'wind': 165.185547,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-CS',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-N-BR.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 9856.75,
        'nuclear': 0.0,
        'solar': 0.0,
        'unknown': 1346.79175,
        'wind': 156.539352,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-N',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-N-BR_negative_solar.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 9856.75,
        'nuclear': 0.0,
        'solar': 0.0,
        'unknown': 1346.79175,
        'wind': 156.539352,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-N',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-N-data.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'production': dict({
        'hydro': 2854.34839,
        'nuclear': 0.0,
        'solar': 1277.97778,
        'unknown': 2756.85742,
        'wind': 324.584167,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-N',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-NE-BR.json]
  list([
    dict({
      'correctedModes': list([
        'solar',
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 1921.36816,
        'nuclear': 0.0,
        'solar': 0,
        'unknown': 2700.472,
        'wind': 2837.92188,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-NE',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-NE-BR_negative_solar.json]
  list([
    dict({
      'correctedModes': list([
        'solar',
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 1921.36816,
        'nuclear': 0.0,
        'solar': 0,
        'unknown': 2700.472,
        'wind': 2837.92188,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-NE',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-NE-data.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'production': dict({
        'hydro': 2081.71338,
        'nuclear': 0.0,
        'solar': 7852.72754,
        'unknown': 153.992935,
        'wind': 11871.0967,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-NE',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-S-BR.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 9273.746,
        'nuclear': 0.0,
        'solar': 0.0,
        'unknown': 855.8522,
        'wind': 1315.103,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-S',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-S-BR_negative_solar.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2018, 1, 27, 20, 19, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=79200))),
      'datetime_end': None,
      'production': dict({
        'hydro': 9273.746,
        'nuclear': 0.0,
        'solar': 0.0,
        'unknown': 855.8522,
        'wind': 1315.103,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-S',
    }),
  ])
# ---
# name: test_snapshot_fetch_production[BR-S-data.json]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 7, 22, 8, 54, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=75600))),
      'datetime_end': None,
      'production': dict({
        'hydro': 8748.055,
        'nuclear': 0.0,
        'solar': 1836.314,
        'unknown': 1583.74609,
        'wind': 342.625763,
      }),
      'source': 'ons.org.br',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BR-S',
    }),
  ])
# ---
